--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             </div><br>
                             <div class="container">
                                 <label for="">Bootstrap5</label>
-                                <div class="progress-bar" style="width: 75%;"></div>
+                                <div class="progress-bar" style="width: 75%;">75%</div>
                             </div><br>
                             <div class="container">
                                 <label for="">PHP</label>
